# 38-lesson

1-task/: CMakeLists.txt
1-task/include/: button.h
1-task/src/: CMakeLists.txt  button.cpp  main.cpp
2-task/: CMakeLists.txt
2-task/include/: htmlEditorMainWindow.h
2-task/src/: CMakeLists.txt  htmlEditor.ui  htmlEditorMainWindow.cpp  main.cpp
3-task/: CMakeLists.txt
3-task/include/: blurMainWindow.h
3-task/src/: BlurWindow.ui  CMakeLists.txt  blurMainWindow.cpp  main.cpp
